application management fixed